--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         }
         h1 , p {
             margin-bottom: 2rem;
-        }
+       } 
         a {
             color: #a5a59d;
         }
@@ -116,7 +116,7 @@
 
             </div>
             <div class="content-logo">
-                <img src="./images/TP_monogramcirkel_zwart_120pt.png" width="150" height="150" />
+                <img src="./images/TP_monogramcirkel_zwart_120pt[].svg" width="150" height="150" />
             </div>
         </div>
     </div>
