--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             min-height: 100%;
             overflow: auto;
             background-size: cover;
-            background-position: bottom right;
+            background-position: center right;
         }
         .content {
             max-width: 50rem;
@@ -71,16 +71,18 @@
         }
         .content-text {
             color: #a5a59d;
-            padding: 2rem;
-            background: rgba(0,0,0, .75);
-            font-size: 32px;
+            padding: 3rem;
+            background: rgba(10,10,10, .85);
         }
         .content-logo {
-            margin-top: 1.5rem;
+            margin-top: 3rem;
         }
         h1 {
-            font-size: 42px;
+            font-size: 36px;
             line-height: 1.2;
+        }
+        p {
+            font-size: 22px
         }
         h1 , p {
             margin-bottom: 2rem;
@@ -116,7 +118,7 @@
 
             </div>
             <div class="content-logo">
-                <img src="./images/TP_monogramcirkel_zwart_120pt[].svg" width="150" height="150" />
+                <img style="opacity: .80;" src="./images/TP_monogramcirkel_zwart_120pt.svg" width="200" height="200" />
             </div>
         </div>
     </div>
