STYLE: Added media queries

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         }
         html {
             box-sizing: border-box;
-            font-size: 16px;
+            font-size: 12px;
             height:100%;
             font-family: 'Gotham';
         }
@@ -65,10 +65,7 @@
             background-size: cover;
             background-position: center right;
         }
-        .content {
-            max-width: 50rem;
-            margin: 5rem 5rem 0 5rem;
-        }
+       
         .content-text {
             color: #a5a59d;
             padding: 3rem;
@@ -78,17 +75,33 @@
             margin-top: 3rem;
         }
         h1 {
-            font-size: 36px;
+            font-size: 22px;
             line-height: 1.2;
         }
         p {
-            font-size: 22px
+            font-size: 16px;
         }
         h1 , p {
             margin-bottom: 2rem;
-       } 
+        } 
         a {
             color: #a5a59d;
+        }
+        @media (min-width: 720px) {
+            html {
+                font-size: 16px;
+            }
+            .content {
+                max-width: 50rem;
+                margin: 5rem 5rem 0 5rem;
+            }
+            h1 {
+                font-size: 36px;
+                line-height: 1.2;
+            }
+            p {
+                font-size: 22px
+            }
         }
     </style>
 </head>
