chore: changed text

--- a/index.html
+++ b/index.html
@@ -112,22 +112,24 @@
                 <h1>Ik had hier natuurlijk een grap kunnen<br>
                 maken met ‘under construction’</h1>
 
-                <p>Want de link naar mijn werk is snel gelegd.</p>
+                <p>Want de link naar mijn werk als bouwkundig<br>
+                    interieurarchitect is snel gelegd.</p>
 
                 <p>Maar ik besteed mijn tijd liever aan het afronden<br>
-                van deze nieuwe website, zodat jij binnenkort <br>
+                van deze nieuwe website, zodat jij binnenkort<br>
                 kan zien wat ik voor je kan betekenen.</p>
 
                 <p>Wil je niet wachten?</p>
 
                 <p>Bel me op <a href="tel:06 534 077 54">06 534 077 54</a></p>
 
-                <p>Of stuur me een mail via <a href="mailto:info@toinepennings.nl">info@toinepennings.nl</a></p>
+                <p>Of stuur me een mail via <a href="mailto:tp@toinepennings.nl">tp@toinepennings.nl</a></p>
 
                 <p>Ik kijk ernaar uit om je te spreken!</p>
 
                 <p>Cheers,<br>
-                Toine</p>
+                    Toine Pennings<br>
+                    <em>Tot in detail.</em></p>
 
             </div>
             <div class="content-logo">
