chore: Added new images

--- a/index.html
+++ b/index.html
@@ -177,12 +177,16 @@
             />
             <img
             class="image"
+            src="https://lh3.googleusercontent.com/pw/AIL4fc8tGIJ6nq83jXxFivWBJPDt0-Df0QdAcV9iW2ZCXnAyYG_HRyipOs2CoPX_LippL6qjla15dw5HNFRK5QvBoyRJTxeWDUbHqgBv4DuJ5vEv8gHy4xIZGtKW3aLraciXmpAUL6j1QzoKqYqynrBv42Zq=w1250-h938-s-no?authuser=0"
+            />
+            <img
+            class="image"
             src="https://lh3.googleusercontent.com/pw/AIL4fc9sxfb_uJ1nDn5sy7EpR1mPn2S70_jPHcNhPe6Jem2Dpx7RLArWLzD9JUu2dNv22UQFlDPGPxnwWoPu-l0XFj5wytZN9VJ272Sg2iPyU1THwoixxNNrb2OwilMB_qWcwAzLv-m5x9zrahjzl2VKRZyw=w1800-h1201-s-no?authuser=0"
             />
             <img
             class="image"
             src="https://lh3.googleusercontent.com/pw/AIL4fc_oORVuK4jtEFfUyEguNYPd_HVAkwH1KcTM_AJGD0K8BNhSNdzBb2PBIhr9eqYazxNdmUjni-LU0XGPDK_xZsra6pbFMKqQfcGisCqVNwkRXSZo3vix7HW_0QAZXKv7Y9qyht3d5p4zILAXx6D5mYvQ=w2475-h1250-s-no?authuser=0"
-            />
+            />            
             <img
             class="image"
             src="https://lh3.googleusercontent.com/pw/AIL4fc_m134YAP0BsjL1EGrvDLqnSZdM22KjJPX3vNjdvCDetIJcFE7lFmcjOWtjTw5PKPlqO7zVQn8wML5XrbNg9vAadPANMR1QU7N9cxMpjH4phEA0G18UkihhQIg4wTrSZUNZnEuWyYlUvhMdcESSn_nB=w1800-h1201-s-no?authuser=0"
@@ -190,6 +194,10 @@
             <img
             class="image"
             src="https://lh3.googleusercontent.com/pw/AIL4fc-3hyInveS5eMlfpI-z51jpwB8vzaBH-unfHRopKl6xiN4ulheWMacWPji7L98qn4oeYVUm7nIX9qIPGYgdtZjds-74OKa2VwUI3Oa4MjwA5pUxLMfIn2AmT_9wT0VFpe9LlTzIVS9egHoJHkL3qWrP=w2450-h1250-s-no?authuser=0"
+            />
+            <img
+            class="image"
+            src="https://lh3.googleusercontent.com/pw/AIL4fc9Gp8aOlXcPpog85UMGtS3QuNYGcVLFwuwBLP6DsLw_4v4GIU5XBlTTlRiMbKsxYRs3Bst0B8vA2-ok9LNs9LNa3Nwp2NcIOddTjre7eMoAfg6HJMfAHy_LlVm2OYmaEeg_l1YwZRedaV-ldhNRcx1k=w1250-h938-s-no?authuser=0"
             />
             <img
             class="image"
@@ -210,6 +218,10 @@
             <img
             class="image"
             src="https://lh3.googleusercontent.com/pw/AIL4fc_SWjzdVnJQg9_Ts8n6df7l3TfKxgk7LrUe8TtccePFqPNF_At6LoNqBHoCNPtH6ocadNA5gsg0XauOXVBCCpX2GcXovS2KdL2Zp4_bvJiDS9ZjTkgauCwWShih12bbdMRBN_MCfDaDm_6UknvN4k33=w1668-h880-s-no?authuser=0"
+            />
+            <img
+            class="image"
+            src="https://lh3.googleusercontent.com/pw/AIL4fc9Mm_STum7WeWAalIJqYrj78IWbetf_rtYm_6XNI038wv2HXkcLSM-o437i8lCXU2al9jQYNICrCxLdIhqg2gQljHylZr2hIoKdrHVqYMfsPIM35JSI_3EwT4QePlXxiiHX9-FCA2LzBC24jSuudnzj=w1250-h938-s-no?authuser=0"
             />
             <img
             class="image"
